src/Parser.automaton
State 0:
program' -> . program [ # ]
-- On T_void shift to state 1
-- On T_int shift to state 2
-- On T_double shift to state 3
-- On T_char shift to state 4
-- On T_bool shift to state 5
-- On variable_declaration shift to state 6
-- On result_type shift to state 7
-- On program shift to state 167
-- On function_definition shift to state 21
-- On function_declaration shift to state 22
-- On declaration_list shift to state 168
-- On declaration shift to state 160
-- On ctype shift to state 149
-- On basic_type shift to state 13

State 1:
result_type -> T_void . [ T_id ]
-- On T_id reduce production result_type -> T_void 

State 2:
basic_type -> T_int . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production basic_type -> T_int 
-- On T_semicolon reduce production basic_type -> T_int 
-- On T_rparen reduce production basic_type -> T_int 
-- On T_rbrack reduce production basic_type -> T_int 
-- On T_qmark reduce production basic_type -> T_int 
-- On T_plus reduce production basic_type -> T_int 
-- On T_plu_assign reduce production basic_type -> T_int 
-- On T_or reduce production basic_type -> T_int 
-- On T_neq reduce production basic_type -> T_int 
-- On T_mul_assign reduce production basic_type -> T_int 
-- On T_mod_assign reduce production basic_type -> T_int 
-- On T_mod reduce production basic_type -> T_int 
-- On T_minus reduce production basic_type -> T_int 
-- On T_min_assign reduce production basic_type -> T_int 
-- On T_lteq reduce production basic_type -> T_int 
-- On T_lt reduce production basic_type -> T_int 
-- On T_lbrack reduce production basic_type -> T_int 
-- On T_incr reduce production basic_type -> T_int 
-- On T_id reduce production basic_type -> T_int 
-- On T_gteq reduce production basic_type -> T_int 
-- On T_gt reduce production basic_type -> T_int 
-- On T_eq reduce production basic_type -> T_int 
-- On T_div_assign reduce production basic_type -> T_int 
-- On T_div reduce production basic_type -> T_int 
-- On T_dcr reduce production basic_type -> T_int 
-- On T_comma reduce production basic_type -> T_int 
-- On T_colon reduce production basic_type -> T_int 
-- On T_assign reduce production basic_type -> T_int 
-- On T_and reduce production basic_type -> T_int 

State 3:
basic_type -> T_double . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production basic_type -> T_double 
-- On T_semicolon reduce production basic_type -> T_double 
-- On T_rparen reduce production basic_type -> T_double 
-- On T_rbrack reduce production basic_type -> T_double 
-- On T_qmark reduce production basic_type -> T_double 
-- On T_plus reduce production basic_type -> T_double 
-- On T_plu_assign reduce production basic_type -> T_double 
-- On T_or reduce production basic_type -> T_double 
-- On T_neq reduce production basic_type -> T_double 
-- On T_mul_assign reduce production basic_type -> T_double 
-- On T_mod_assign reduce production basic_type -> T_double 
-- On T_mod reduce production basic_type -> T_double 
-- On T_minus reduce production basic_type -> T_double 
-- On T_min_assign reduce production basic_type -> T_double 
-- On T_lteq reduce production basic_type -> T_double 
-- On T_lt reduce production basic_type -> T_double 
-- On T_lbrack reduce production basic_type -> T_double 
-- On T_incr reduce production basic_type -> T_double 
-- On T_id reduce production basic_type -> T_double 
-- On T_gteq reduce production basic_type -> T_double 
-- On T_gt reduce production basic_type -> T_double 
-- On T_eq reduce production basic_type -> T_double 
-- On T_div_assign reduce production basic_type -> T_double 
-- On T_div reduce production basic_type -> T_double 
-- On T_dcr reduce production basic_type -> T_double 
-- On T_comma reduce production basic_type -> T_double 
-- On T_colon reduce production basic_type -> T_double 
-- On T_assign reduce production basic_type -> T_double 
-- On T_and reduce production basic_type -> T_double 

State 4:
basic_type -> T_char . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production basic_type -> T_char 
-- On T_semicolon reduce production basic_type -> T_char 
-- On T_rparen reduce production basic_type -> T_char 
-- On T_rbrack reduce production basic_type -> T_char 
-- On T_qmark reduce production basic_type -> T_char 
-- On T_plus reduce production basic_type -> T_char 
-- On T_plu_assign reduce production basic_type -> T_char 
-- On T_or reduce production basic_type -> T_char 
-- On T_neq reduce production basic_type -> T_char 
-- On T_mul_assign reduce production basic_type -> T_char 
-- On T_mod_assign reduce production basic_type -> T_char 
-- On T_mod reduce production basic_type -> T_char 
-- On T_minus reduce production basic_type -> T_char 
-- On T_min_assign reduce production basic_type -> T_char 
-- On T_lteq reduce production basic_type -> T_char 
-- On T_lt reduce production basic_type -> T_char 
-- On T_lbrack reduce production basic_type -> T_char 
-- On T_incr reduce production basic_type -> T_char 
-- On T_id reduce production basic_type -> T_char 
-- On T_gteq reduce production basic_type -> T_char 
-- On T_gt reduce production basic_type -> T_char 
-- On T_eq reduce production basic_type -> T_char 
-- On T_div_assign reduce production basic_type -> T_char 
-- On T_div reduce production basic_type -> T_char 
-- On T_dcr reduce production basic_type -> T_char 
-- On T_comma reduce production basic_type -> T_char 
-- On T_colon reduce production basic_type -> T_char 
-- On T_assign reduce production basic_type -> T_char 
-- On T_and reduce production basic_type -> T_char 

State 5:
basic_type -> T_bool . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production basic_type -> T_bool 
-- On T_semicolon reduce production basic_type -> T_bool 
-- On T_rparen reduce production basic_type -> T_bool 
-- On T_rbrack reduce production basic_type -> T_bool 
-- On T_qmark reduce production basic_type -> T_bool 
-- On T_plus reduce production basic_type -> T_bool 
-- On T_plu_assign reduce production basic_type -> T_bool 
-- On T_or reduce production basic_type -> T_bool 
-- On T_neq reduce production basic_type -> T_bool 
-- On T_mul_assign reduce production basic_type -> T_bool 
-- On T_mod_assign reduce production basic_type -> T_bool 
-- On T_mod reduce production basic_type -> T_bool 
-- On T_minus reduce production basic_type -> T_bool 
-- On T_min_assign reduce production basic_type -> T_bool 
-- On T_lteq reduce production basic_type -> T_bool 
-- On T_lt reduce production basic_type -> T_bool 
-- On T_lbrack reduce production basic_type -> T_bool 
-- On T_incr reduce production basic_type -> T_bool 
-- On T_id reduce production basic_type -> T_bool 
-- On T_gteq reduce production basic_type -> T_bool 
-- On T_gt reduce production basic_type -> T_bool 
-- On T_eq reduce production basic_type -> T_bool 
-- On T_div_assign reduce production basic_type -> T_bool 
-- On T_div reduce production basic_type -> T_bool 
-- On T_dcr reduce production basic_type -> T_bool 
-- On T_comma reduce production basic_type -> T_bool 
-- On T_colon reduce production basic_type -> T_bool 
-- On T_assign reduce production basic_type -> T_bool 
-- On T_and reduce production basic_type -> T_bool 

State 6:
declaration -> variable_declaration . [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_void reduce production declaration -> variable_declaration 
-- On T_true reduce production declaration -> variable_declaration 
-- On T_times reduce production declaration -> variable_declaration 
-- On T_string reduce production declaration -> variable_declaration 
-- On T_semicolon reduce production declaration -> variable_declaration 
-- On T_return reduce production declaration -> variable_declaration 
-- On T_rbrace reduce production declaration -> variable_declaration 
-- On T_plus reduce production declaration -> variable_declaration 
-- On T_null reduce production declaration -> variable_declaration 
-- On T_new reduce production declaration -> variable_declaration 
-- On T_negate reduce production declaration -> variable_declaration 
-- On T_minus reduce production declaration -> variable_declaration 
-- On T_lparen reduce production declaration -> variable_declaration 
-- On T_lbrace reduce production declaration -> variable_declaration 
-- On T_int_const reduce production declaration -> variable_declaration 
-- On T_int reduce production declaration -> variable_declaration 
-- On T_incr reduce production declaration -> variable_declaration 
-- On T_if reduce production declaration -> variable_declaration 
-- On T_id reduce production declaration -> variable_declaration 
-- On T_for reduce production declaration -> variable_declaration 
-- On T_false reduce production declaration -> variable_declaration 
-- On T_eof reduce production declaration -> variable_declaration 
-- On T_double_const reduce production declaration -> variable_declaration 
-- On T_double reduce production declaration -> variable_declaration 
-- On T_delete reduce production declaration -> variable_declaration 
-- On T_dcr reduce production declaration -> variable_declaration 
-- On T_continue reduce production declaration -> variable_declaration 
-- On T_char_const reduce production declaration -> variable_declaration 
-- On T_char reduce production declaration -> variable_declaration 
-- On T_break reduce production declaration -> variable_declaration 
-- On T_bool reduce production declaration -> variable_declaration 
-- On T_addr reduce production declaration -> variable_declaration 

State 7:
function_declaration -> result_type . T_id T_lparen parameter_list_e T_rparen T_semicolon [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
function_definition -> result_type . T_id T_lparen parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_id shift to state 8

State 8:
function_declaration -> result_type T_id . T_lparen parameter_list_e T_rparen T_semicolon [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
function_definition -> result_type T_id . T_lparen parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_lparen shift to state 9

State 9:
function_declaration -> result_type T_id T_lparen . parameter_list_e T_rparen T_semicolon [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
function_definition -> result_type T_id T_lparen . parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_int shift to state 2
-- On T_double shift to state 3
-- On T_char shift to state 4
-- On T_byref shift to state 10
-- On T_bool shift to state 5
-- On parameter_list_e shift to state 17
-- On parameter_list shift to state 161
-- On parameter shift to state 166
-- On ctype shift to state 164
-- On basic_type shift to state 13
-- On T_rparen reduce production parameter_list_e -> 

State 10:
parameter -> T_byref . ctype T_id [ T_rparen T_comma ]
-- On T_int shift to state 2
-- On T_double shift to state 3
-- On T_char shift to state 4
-- On T_bool shift to state 5
-- On ctype shift to state 11
-- On basic_type shift to state 13

State 11:
parameter -> T_byref ctype . T_id [ T_rparen T_comma ]
-- On T_id shift to state 12

State 12:
parameter -> T_byref ctype T_id . [ T_rparen T_comma ]
-- On T_rparen reduce production parameter -> T_byref ctype T_id 
-- On T_comma reduce production parameter -> T_byref ctype T_id 

State 13:
ctype -> basic_type . pointer_asterisk_e [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times shift to state 14
-- On pointer_asterisk_e shift to state 16
-- On T_semicolon reduce production pointer_asterisk_e -> 
-- On T_rparen reduce production pointer_asterisk_e -> 
-- On T_rbrack reduce production pointer_asterisk_e -> 
-- On T_qmark reduce production pointer_asterisk_e -> 
-- On T_plus reduce production pointer_asterisk_e -> 
-- On T_plu_assign reduce production pointer_asterisk_e -> 
-- On T_or reduce production pointer_asterisk_e -> 
-- On T_neq reduce production pointer_asterisk_e -> 
-- On T_mul_assign reduce production pointer_asterisk_e -> 
-- On T_mod_assign reduce production pointer_asterisk_e -> 
-- On T_mod reduce production pointer_asterisk_e -> 
-- On T_minus reduce production pointer_asterisk_e -> 
-- On T_min_assign reduce production pointer_asterisk_e -> 
-- On T_lteq reduce production pointer_asterisk_e -> 
-- On T_lt reduce production pointer_asterisk_e -> 
-- On T_lbrack reduce production pointer_asterisk_e -> 
-- On T_incr reduce production pointer_asterisk_e -> 
-- On T_id reduce production pointer_asterisk_e -> 
-- On T_gteq reduce production pointer_asterisk_e -> 
-- On T_gt reduce production pointer_asterisk_e -> 
-- On T_eq reduce production pointer_asterisk_e -> 
-- On T_div_assign reduce production pointer_asterisk_e -> 
-- On T_div reduce production pointer_asterisk_e -> 
-- On T_dcr reduce production pointer_asterisk_e -> 
-- On T_comma reduce production pointer_asterisk_e -> 
-- On T_colon reduce production pointer_asterisk_e -> 
-- On T_assign reduce production pointer_asterisk_e -> 
-- On T_and reduce production pointer_asterisk_e -> 

State 14:
pointer_asterisk_e -> T_times . pointer_asterisk_e [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times shift to state 14
-- On pointer_asterisk_e shift to state 15
-- On T_semicolon reduce production pointer_asterisk_e -> 
-- On T_rparen reduce production pointer_asterisk_e -> 
-- On T_rbrack reduce production pointer_asterisk_e -> 
-- On T_qmark reduce production pointer_asterisk_e -> 
-- On T_plus reduce production pointer_asterisk_e -> 
-- On T_plu_assign reduce production pointer_asterisk_e -> 
-- On T_or reduce production pointer_asterisk_e -> 
-- On T_neq reduce production pointer_asterisk_e -> 
-- On T_mul_assign reduce production pointer_asterisk_e -> 
-- On T_mod_assign reduce production pointer_asterisk_e -> 
-- On T_mod reduce production pointer_asterisk_e -> 
-- On T_minus reduce production pointer_asterisk_e -> 
-- On T_min_assign reduce production pointer_asterisk_e -> 
-- On T_lteq reduce production pointer_asterisk_e -> 
-- On T_lt reduce production pointer_asterisk_e -> 
-- On T_lbrack reduce production pointer_asterisk_e -> 
-- On T_incr reduce production pointer_asterisk_e -> 
-- On T_id reduce production pointer_asterisk_e -> 
-- On T_gteq reduce production pointer_asterisk_e -> 
-- On T_gt reduce production pointer_asterisk_e -> 
-- On T_eq reduce production pointer_asterisk_e -> 
-- On T_div_assign reduce production pointer_asterisk_e -> 
-- On T_div reduce production pointer_asterisk_e -> 
-- On T_dcr reduce production pointer_asterisk_e -> 
-- On T_comma reduce production pointer_asterisk_e -> 
-- On T_colon reduce production pointer_asterisk_e -> 
-- On T_assign reduce production pointer_asterisk_e -> 
-- On T_and reduce production pointer_asterisk_e -> 

State 15:
pointer_asterisk_e -> T_times pointer_asterisk_e . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_semicolon reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_rparen reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_rbrack reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_qmark reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_plus reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_plu_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_or reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_neq reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_mul_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_mod_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_mod reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_minus reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_min_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_lteq reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_lt reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_lbrack reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_incr reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_id reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_gteq reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_gt reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_eq reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_div_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_div reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_dcr reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_comma reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_colon reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_assign reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 
-- On T_and reduce production pointer_asterisk_e -> T_times pointer_asterisk_e 

State 16:
ctype -> basic_type pointer_asterisk_e . [ T_times T_semicolon T_rparen T_rbrack T_qmark T_plus T_plu_assign T_or T_neq T_mul_assign T_mod_assign T_mod T_minus T_min_assign T_lteq T_lt T_lbrack T_incr T_id T_gteq T_gt T_eq T_div_assign T_div T_dcr T_comma T_colon T_assign T_and ]
-- On T_times reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_semicolon reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_rparen reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_rbrack reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_qmark reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_plus reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_plu_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_or reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_neq reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_mul_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_mod_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_mod reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_minus reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_min_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_lteq reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_lt reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_lbrack reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_incr reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_id reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_gteq reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_gt reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_eq reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_div_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_div reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_dcr reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_comma reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_colon reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_assign reduce production ctype -> basic_type pointer_asterisk_e 
-- On T_and reduce production ctype -> basic_type pointer_asterisk_e 

State 17:
function_declaration -> result_type T_id T_lparen parameter_list_e . T_rparen T_semicolon [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
function_definition -> result_type T_id T_lparen parameter_list_e . T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_rparen shift to state 18

State 18:
function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen . T_semicolon [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
function_definition -> result_type T_id T_lparen parameter_list_e T_rparen . T_lbrace declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_semicolon shift to state 19
-- On T_lbrace shift to state 20

State 19:
function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon . [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_void reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_true reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_times reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_string reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_semicolon reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_return reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_rbrace reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_plus reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_null reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_new reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_negate reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_minus reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_lparen reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_lbrace reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_int_const reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_int reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_incr reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_if reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_id reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_for reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_false reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_eof reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_double_const reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_double reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_delete reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_dcr reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_continue reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_char_const reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_char reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_break reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_bool reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 
-- On T_addr reduce production function_declaration -> result_type T_id T_lparen parameter_list_e T_rparen T_semicolon 

State 20:
function_definition -> result_type T_id T_lparen parameter_list_e T_rparen T_lbrace . declaration_list_e statement_list_e T_rbrace [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_void shift to state 1
-- On T_int shift to state 2
-- On T_double shift to state 3
-- On T_char shift to state 4
-- On T_bool shift to state 5
-- On variable_declaration shift to state 6
-- On result_type shift to state 7
-- On function_definition shift to state 21
-- On function_declaration shift to state 22
-- On declaration_list_e shift to state 23
-- On declaration_list shift to state 147
-- On declaration shift to state 160
-- On ctype shift to state 149
-- On basic_type shift to state 13
-- On T_true reduce production declaration_list_e -> 
-- On T_times reduce production declaration_list_e -> 
-- On T_string reduce production declaration_list_e -> 
-- On T_semicolon reduce production declaration_list_e -> 
-- On T_return reduce production declaration_list_e -> 
-- On T_rbrace reduce production declaration_list_e -> 
-- On T_plus reduce production declaration_list_e -> 
-- On T_null reduce production declaration_list_e -> 
-- On T_new reduce production declaration_list_e -> 
-- On T_negate reduce production declaration_list_e -> 
-- On T_minus reduce production declaration_list_e -> 
-- On T_lparen reduce production declaration_list_e -> 
-- On T_lbrace reduce production declaration_list_e -> 
-- On T_int_const reduce production declaration_list_e -> 
-- On T_incr reduce production declaration_list_e -> 
-- On T_if reduce production declaration_list_e -> 
-- On T_id reduce production declaration_list_e -> 
-- On T_for reduce production declaration_list_e -> 
-- On T_false reduce production declaration_list_e -> 
-- On T_double_const reduce production declaration_list_e -> 
-- On T_delete reduce production declaration_list_e -> 
-- On T_dcr reduce production declaration_list_e -> 
-- On T_continue reduce production declaration_list_e -> 
-- On T_char_const reduce production declaration_list_e -> 
-- On T_break reduce production declaration_list_e -> 
-- On T_addr reduce production declaration_list_e -> 

State 21:
declaration -> function_definition . [ T_void T_true T_times T_string T_semicolon T_return T_rbrace T_plus T_null T_new T_negate T_minus T_lparen T_lbrace T_int_const T_int T_incr T_if T_id T_for T_false T_eof T_double_const T_double T_delete T_dcr T_continue T_char_const T_char T_break T_bool T_addr ]
-- On T_void reduce production declaration -> function_definition 
-- On T_true reduce production declaration -> function_definition 
-- On T_times reduce production declaration -> function_definition 
-- On T_string reduce production declaration -> function_definition 
-- On T_semicolon reduce production declaration -> function_definition 
-- On T_return reduce production declaration -> function_definition 
-- On T_rbrace reduce production declaration -> function_definition 
-- On T_plus reduce production declaration -> function_definition 
-- On T_null reduce production declaration -> function_definition 
-- On T_new reduce production declaration -> function_definition 
-- On T_negate reduce production declaration -> function_definition 
-- On T_minus reduce production declaration -> function_definition 
-- On T_lparen reduce production declaration -> function_definition 
-- On T_lbrace reduce production declaration -> function_definition 
-- On T_int_const reduce production declaration -> function_definition 
-- On T_int reduce production declaration -> function_definition 
-- On T_incr reduce production declaration -> function_definition 
-- On T_if reduce production declaration -> function_definition 
-- On T_id reduce production declaration -> function_definition 
-- On T_for reduce production declaration -> function_definition 
-- On T_false reduce production declaration -> function_definition 
-- On T_eof reduce production declaration -> function_definition 
-- On T_double_const reduce production declaration -> function_definition 
-- On T_double reduce production declaration -> function_definition 
-- On T_delete reduce production declaration -> function_definition 
-- On T_dcr reduce production declaration -> function_definition 
-- On T_continue reduce production declaration -> function_definition 
-- On T_char_const reduce production declaration -> function_definition 
-- On T_char reduce production declaration -> function_definition 
-- On T_break reduce production declaration -> function_definition 
-- On T_bool reduce production declaration -> function_definition 
-- On T_addr reduce production declaration -> function_definition 
